testing body issue by overflow removed

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 }
 
 body {
-    overflow: hidden;
+    /* overflow: hidden; */
     user-select: none;
     /* height: 100vh; */
     /* width: 100vw; */
